[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_single_line = true
# force_grid_wrap = 0
# include_trailing_comma = true
# multi_line_option = 3
# use_parenthesis = true

[tool.poetry]
name = "pybase"
version = "0.1.0"
description = ""
authors = ["imjuanleonard <julioanthonyleonard@gmail.com>"]

[tool.poetry.dependencies]
loguru = "^0.6.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
ipython = "^8.1.1"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.16.0"
pylint = "^2.12.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
reorder-python-imports = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
