[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_single_line = true
# force_grid_wrap = 0
# include_trailing_comma = true
# multi_line_option = 3
# use_parenthesis = true

[tool.poetry]
name = "pybase"
version = "0.1.0"
description = ""
authors = ["John Kane <John.Kane@Kane.net>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.*"
flake8 = "*"
ipython = "^8.1.1"
isort = "^5.10.*"
#ypy = "^0.931"  I don't understand mypy, so not loading
pre-commit = "*"
pylint = "^2.12.2"
# I am not currently writing tests (bad dev), so not loading
#pytest = "*"
#pytest-cov = "*"
reorder-python-imports = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
